# mcpi

./: Cargo.toml  LICENSE  README.md  build-and-run.sh
chrome-extension/: background.js  manifest.json  popup.html
chrome-extension/css/: popup.css
chrome-extension/js/: popup.js
data/: config.json  products.json  reviews.json
data/client/: config.json
data/hello/: config.json
data/mock/: website_content.json
data/server/: config.json  data.json
data/social/referrals/: data.json
data/store/customers/: data.json
data/store/orders/: data.json
data/weather/locations/: data.json
data/website/content/: data.json
docker/server/: .dockerignore  Dockerfile  docker-compose.yml
docs/: Architecture.md  Contribution.md  DockerServer.md  HelloProtocol.md
mcpi-client/: Cargo.toml
mcpi-client/src/: discovery.rs  main.rs
mcpi-common/: Cargo.toml
mcpi-common/src/: json_plugin.rs  lib.rs  plugin.rs  plugin_factory.rs
mcpi-server/: Cargo.toml
mcpi-server/src/: admin.rs  main.rs  message_handler.rs  plugin_registry.rs  traits.rs
mcpi-server/src/plugins/: hello_plugin.rs  mod.rs  social_plugin.rs  store_plugin.rs  weather_plugin.rs  website_plugin.rs
mcpi-server/src/plugins/hello/: mod.rs  operations.rs  plugin.rs
mcpi-server/src/plugins/social/: mod.rs  operations.rs  plugin.rs
mcpi-server/src/plugins/store/: customer.rs  mod.rs  operations.rs  order.rs  product.rs  review.rs
mcpi-server/src/plugins/weather/: mod.rs  operations.rs  plugin.rs
mcpi-server/src/plugins/website/: mod.rs  operations.rs  plugin.rs
mcpi-server/src/transport/: mod.rs  streamable_http.rs  traits.rs  websocket.rs
mcpi-server/static/: admin.html
