[package]
name = "mcpi-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mcpi-common = { path = "../mcpi-common" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }