[package]
name = "mcpi-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mcpi-common = { path = "../mcpi-common" }
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures = "0.3.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11.22", features = ["json"] }
regex = "1.10.2"
url = "2.5.0"
clap = { version = "4.4.10", features = ["derive"] }
rand = "0.8"