[package]
name = "mcpi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mcpi-common = { path = "../mcpi-common" }
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.29"
fastrand = "2.3.0"
chrono = "0.4.40"